NLP TP/texts/robotics/robotics.stackexchange_0000076714.txt
Q:

Failed to process package 'cartographer':

when i build the cartographer_ros ,errors happened as follow:
[6/90] Building documentation.
Running Sphinx v1.2.2
loading pickled environment... done
building [html]: targets for 0 source files that are out of date
updating environment: 0 added, 0 changed, 0 removed
looking for now-outdated files... none found
no targets are out of date.
[9/90] Building CXX object cartographe...eal_time_correlative_scan_matcher.cc.o
FAILED: /usr/bin/c++    -O3 -DNDEBUG -isystem /usr/include/eigen3 -isystem /home/exbot/cartographer/install_isolated/include -I. -I/home/exbot/cartographer/src/cartographer -isystem /usr/include/lua5.2 -I/home/exbot/cartographer/src/cartographer/cartographer/common/{Boost_INCLUDE_DIRS}     -O3 -DNDEBUG -std=c++11 -Wall -Wpedantic -Werror=format-security -Werror=return-type -Werror=uninitialized -MMD -MT cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_real_time_correlative_scan_matcher.dir/real_time_correlative_scan_matcher.cc.o -MF "cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_real_time_correlative_scan_matcher.dir/real_time_correlative_scan_matcher.cc.o.d" -o cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_real_time_correlative_scan_matcher.dir/real_time_correlative_scan_matcher.cc.o -c /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/real_time_correlative_scan_matcher.cc
In file included from /opt/eigen/Eigen/Geometry:39:0,
                 from /opt/eigen/Eigen/Dense:6,
                 from /home/exbot/cartographer/install_isolated/include/ceres/internal/numeric_diff.h:40,
                 from /home/exbot/cartographer/install_isolated/include/ceres/dynamic_numeric_diff_cost_function.h:70,
                 from /home/exbot/cartographer/install_isolated/include/ceres/ceres.h:44,
                 from /home/exbot/cartographer/src/cartographer/cartographer/common/math.h:25,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/probability_grid.h:28,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/real_time_correlative_scan_matcher.h:44,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/real_time_correlative_scan_matcher.cc:17:
/opt/eigen/Eigen/src/Geometry/Rotation2D.h: In instantiation of ‘Eigen::Rotation2D<Scalar> Eigen::Rotation2D<Scalar>::operator*(const Eigen::Rotation2D<Scalar>&) const [with _Scalar = double]’:
/home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/real_time_correlative_scan_matcher.cc:123:71:   required from here
/opt/eigen/Eigen/src/Geometry/Rotation2D.h:78:28: error: could not convert ‘(((Eigen::Rotation2D<double>::Scalar)((const Eigen::Rotation2D<double>*)this)->Eigen::Rotation2D<double>::m_angle) + ((Eigen::Rotation2D<double>::Scalar)other.Eigen::Rotation2D<double>::m_angle))’ from ‘Eigen::Rotation2D<double>::Scalar {aka double}’ to ‘Eigen::Rotation2D<double>’
   { return m_angle + other.m_angle; }
                            ^
[9/90] Building CXX object cartographe...dir/fast_correlative_scan_matcher.cc.o
FAILED: /usr/bin/c++    -O3 -DNDEBUG -isystem /usr/include/eigen3 -isystem /home/exbot/cartographer/install_isolated/include -I. -I/home/exbot/cartographer/src/cartographer -I/home/exbot/cartographer/src/cartographer/cartographer/common/{Boost_INCLUDE_DIRS} -isystem /usr/include/lua5.2     -O3 -DNDEBUG -std=c++11 -Wall -Wpedantic -Werror=format-security -Werror=return-type -Werror=uninitialized -MMD -MT cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_fast_correlative_scan_matcher.dir/fast_correlative_scan_matcher.cc.o -MF "cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_fast_correlative_scan_matcher.dir/fast_correlative_scan_matcher.cc.o.d" -o cartographer/mapping_2d/scan_matching/CMakeFiles/mapping_2d_scan_matching_fast_correlative_scan_matcher.dir/fast_correlative_scan_matcher.cc.o -c /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/fast_correlative_scan_matcher.cc
In file included from /opt/eigen/Eigen/Geometry:39:0,
                 from /opt/eigen/Eigen/Dense:6,
                 from /home/exbot/cartographer/install_isolated/include/ceres/internal/numeric_diff.h:40,
                 from /home/exbot/cartographer/install_isolated/include/ceres/dynamic_numeric_diff_cost_function.h:70,
                 from /home/exbot/cartographer/install_isolated/include/ceres/ceres.h:44,
                 from /home/exbot/cartographer/src/cartographer/cartographer/common/math.h:25,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/probability_grid.h:28,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/fast_correlative_scan_matcher.h:33,
                 from /home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/fast_correlative_scan_matcher.cc:17:
/opt/eigen/Eigen/src/Geometry/Rotation2D.h: In instantiation of ‘Eigen::Rotation2D<Scalar> Eigen::Rotation2D<Scalar>::operator*(const Eigen::Rotation2D<Scalar>&) const [with _Scalar = double]’:
/home/exbot/cartographer/src/cartographer/cartographer/mapping_2d/scan_matching/fast_correlative_scan_matcher.cc:270:73:   required from here
/opt/eigen/Eigen/src/Geometry/Rotation2D.h:78:28: error: could not convert ‘(((Eigen::Rotation2D<double>::Scalar)((const Eigen::Rotation2D<double>*)this)->Eigen::Rotation2D<double>::m_angle) + ((Eigen::Rotation2D<double>::Scalar)other.Eigen::Rotation2D<double>::m_angle))’ from ‘Eigen::Rotation2D<double>::Scalar {aka double}’ to ‘Eigen::Rotation2D<double>’
   { return m_angle + other.m_angle; }
                            ^
[9/90] Building CXX object cartographe..._test.dir/laser_fan_inserter_test.cc.o
ninja: build stopped: subcommand failed.
<== Failed to process package 'cartographer': 
  Command '/home/exbot/cartographer/install_isolated/env.sh ninja -j4 -l4' returned non-zero exit status 1

Reproduce this error by running:
==> cd /home/exbot/cartographer/build_isolated/cartographer && /home/exbot/cartographer/install_isolated/env.sh ninja -j4 -l4

Command failed, exiting.

i have rebuilt many times but the errors are still have.My ROS is indigo,ubuntu 14.04 x86.But I have succeed to build cartographer in the other computer which has ROS indigo ,ubuntu 14.04 x64.plz help!

Originally posted by yueweiliang on ROS Answers with karma: 21 on 2016-10-10
Post score: 0

Original comments
Comment by gvdhoorn on 2016-10-11:
I think this is specific enough to be solved by the Cartographer devs themselves. I recommend you report this to cartographer_ros/issues. Please report back if/when you resolve this.
Comment by yueweiliang on 2016-10-11:
I have get the reply from github that X86 is unsopported.But they also say that the errors may not be caused by X86 or X64.I decided to change to X64 to solve it ........
Comment by gvdhoorn on 2016-10-11:
Could you provide a link to the github issue that you reported?

A:

Resolved here: https://github.com/googlecartographer/cartographer/issues/42

Originally posted by damonkohler with karma: 3838 on 2016-12-01
This answer was ACCEPTED on the original site
Post score: 0

